# orbeai

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  package.json  vite.config.ts
.lovable/: plan.md
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260627_0001_initial_schema.py  20260627_0002_feature_flags.py  20260627_0003_workspace_settings.py  20260627_0004_auth_foundation.py
backend/app/: __init__.py  main.py
backend/app/core/: config.py  logging.py  permissions.py  security.py
backend/app/db/: base.py
backend/app/dependencies/: __init__.py  auth.py  permissions.py  workspace.py
backend/tests/: conftest.py  test_artifacts_api.py  test_audit_api.py  test_auth_api.py  test_auth_migration_contract.py  test_auth_models_metadata.py  test_auth_route_protection_api.py  test_auth_schemas.py  test_auth_security.py  test_auth_service.py  test_backend_foundation_contract.py  test_chat_auto_memory_api.py  test_chat_send_api.py  test_chats_api.py  test_current_workspace_context_api.py  test_feature_flags_api.py  test_feature_flags_runtime_api.py  test_health.py  test_memories_api.py  test_messages_api.py  test_model_providers_api.py  test_model_runs_api.py  test_models_metadata.py  test_orbe_router_api.py  test_permissions_dependency.py  test_permissions_matrix.py  test_projects_api.py  test_route_permissions_api.py  test_runtime_state_isolation.py  test_workspace_api.py  test_workspace_defaults_runtime_api.py  test_workspace_members_api.py  test_workspace_policies_runtime_api.py
(+127 files in other folders)
